hphp/test/zend7/Zend/tests/bug31102.php.expectf
__autoload(Test1,1)
Caught: Test1::__construct
__autoload(Test2,2)
Caught: __autoload
__autoload(Test3,3)

Fatal error: %s
Stack trace:
#0 %s(%d): eval()
#1 {main}
  thrown in %sbug31102.php(%d) : eval()'d code on line 1